infra/traefik/forward-auth/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://forward-auth.traefik.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Forwarded-User"
      - "X-Forwarded-Email"
