infra/traefik/forward-auth/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth
  namespace: traefik
  labels:
    app: forward-auth
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-auth
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
        - name: forward-auth
          image: thomseddon/traefik-forward-auth:2.2.0
          ports:
            - name: forward-auth
              containerPort: 4181
          volumeMounts:
            - name: rules
              mountPath: /rules
          startupProbe:
            tcpSocket:
              port: forward-auth
            failureThreshold: 30
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            tcpSocket:
              port: forward-auth
            failureThreshold: 2
            timeoutSeconds: 10
            periodSeconds: 30
          resources: {}
      volumes:
        - name: rules
          secret:
            secretName: forward-auth-rules
            items:
              - key: rules
                path: config.ini
      restartPolicy: Always
      automountServiceAccountToken: false
