infra/traefik/forward-auth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forward-auth
  namespace: traefik
spec:
  ports:
    - name: forward-auth
      port: 4181
      targetPort: forward-auth
  selector:
    app: forward-auth
  type: ClusterIP
