infra/traefik/forward-auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forward-auth
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: fw-auth.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forward-auth
                port:
                  name: forward-auth
